Fixed issue on mobile

--- a/src/components/puzzles/pr-lock/pr-lock.css
+++ b/src/components/puzzles/pr-lock/pr-lock.css
@@ -7,6 +7,7 @@
   background-color: #1d1d1d;
   border: solid 1px rgba(255, 255, 255, 0.44);
   margin: 2px;
+  padding: 0;
 }
 
 button.keypad-button:active {
